# reads2graph

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Minimiser_edit_distance_counts.txt  README.md  SRR1543965.umi.fasta  build.sh  environment.yaml  gxx_env.yml  meta.yaml  nohup.out  test.py
include/: EdgeConstructor.h  EdgeConstructor.hpp  GraphConstructor.hpp  GraphManager.h  GraphManager.hpp  LoggingLevels.h  LoggingLevels.hpp  MinimizerGenerator.h  MinimizerGenerator.hpp  NgramBKTree.hpp  OMH.hpp  PairWiseEditDis.h  PairWiseEditDis.hpp  ReadGraph.hpp  ReadWrite.h  ReadWrite.hpp  StatisticsRecorder.hpp  Utils.h  Utils.hpp  gOMH.hpp  miniception.hpp  omh.hpp  seeded_prg.hpp  xxhash.hpp
src/: EdgeConstructor.cpp  GraphConstructor.cpp  GraphManager.cpp  LoggingLevels.cpp  MinimizerGenerator.cpp  OMH.cpp  PairWiseEditDis.cpp  ReadGraph.cpp  ReadWrite.cpp  Utils.cpp  gOMH.cpp  miniception.cpp  omh.cpp  reads2graph.cpp
